# realtor.com

./: .gitignore  README.md  pyproject.toml
realtor_com/: common.py  items.py  middlewares.py  models.py  pipelines.py  policy.py  scrape_agencies.py  scrape_agencies.sh  scrape_agents.py  scrape_agents.sh  scrape_properties.py  scrape_properties.sh  scrape_teams.py  scrape_teams.sh  settings.py
realtor_com/spiders/: agency.py  agent.py  base.py  property.py  team.py
realtor_com/tests/: test_property.py
