[tool.poetry]
name = "realtor-com"
version = "0.1.0"
description = ""
authors = ["Edilou Bernardino <ediloub@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.9.0"
scrapy-user-agents = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
