[tool.poetry]
name = "realtor-com"
version = "0.1.0"
description = "Scraping realtor.com"
authors = ["Edilou Bernardino <ediloub@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.9.0"
scrapy-proxy-pool = "^0.1.9"
scrapy-fake-useragent = "^1.4.4"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.17"
psycopg2-binary = "^2.9.6"
betamax = "^0.8.1"
betamax-serializers = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
